[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Pause.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/100pt.tres" type="DynamicFont" id=2]

[node name="Pause" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.027451, 0.027451, 0.027451, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_right = 1024.0
margin_bottom = 720.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
margin_left = 295.0
margin_top = 278.0
margin_right = 728.0
margin_bottom = 442.0
alignment = 1

[node name="LinkButton" type="LinkButton" parent="MarginContainer/CenterContainer/VBoxContainer"]
margin_right = 433.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 2 )
text = "Resume"
underline = 1

[node name="LinkButton2" type="LinkButton" parent="MarginContainer/CenterContainer/VBoxContainer"]
pause_mode = 2
margin_top = 84.0
margin_right = 433.0
margin_bottom = 164.0
custom_fonts/font = ExtResource( 2 )
text = "Back to Menu"
underline = 1
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/LinkButton" to="." method="_on_LinkButton_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer/VBoxContainer/LinkButton2" to="." method="_on_LinkButton2_pressed"]
